clusters/jupiter/apps/spuxx-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spuxx-dev
  namespace: spuxx-dev
  labels:
    app: spuxx-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spuxx-dev
  template:
    metadata:
      labels:
        app: spuxx-dev
    spec:
      containers:
        - name: spuxx-dev
          image: spuxx/spuxx-dev:master-4d60bc22887a893f3e0f9dace1cc8c87786faef4 # {"$imagepolicy": "spuxx-dev:spuxx-dev"}
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
